--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title></title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
  <!-- Custom Fonts -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-<style type="text/css">
-	body{
-		padding-bottom: 70px;
-	}
-</style>
+   	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -31,12 +25,9 @@
 				<li class="active"><a href="#">Home</a></li>
 				<li><a href="#">Contact Us</a></li>
 				<li><a href="#">Logout</a></li>
-				
 			</ul>
 		</div>
-		
 	</div>
-
 </div>
 
 	
@@ -78,7 +69,7 @@
 
 				The Verge reports that Bezos tried out the 13-foot-tall (4 meters) robot yesterday (March 19) at his company's private Machine Learning, Home Automation, Robotics and Space Exploration (MARS) conference. Video of the bot, developed by Hankook Mirae Technology in South Korea..
 				</p>
-			<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
+				<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
 			</div>
 			<div class="col-xs-4">
 				<a href="#"><h3>Doomsday Library Joins Seed Vault in Arctic Norway</h3></a>
@@ -86,9 +77,9 @@
 				<p>
 				The so-called doomsday seed vault located underground on a remote island in the Arctic Ocean has gained a neighbor, and the new vault, opened March 27, will act as a digital archive for the world's data.
 
-	            The underground Svalbard Global Seed Vault was built in 2008, about 620 miles (1,000 kilometers) from the North Pole. The frozen-storage facility houses the world's most important c
+	          		The underground Svalbard Global Seed Vault was built in 2008, about 620 miles (1,000 kilometers) from the North Pole. The frozen-storage facility houses the world's most important c
 				</p>
-			<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
+				<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
 			</div>
 			
 			
@@ -96,14 +87,12 @@
 		
 	</div>
 	</center>	
-</div>
-     
-    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
-	 	<a href="#">
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-		</a>
-
 	
-</div>
+<div class="navbar navbar-default navbar-static-bottom">
+ 	<div class="container">
+    		<p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+	</div>	
+</div>	
+
 </body>
 </html>
