--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 </head>
-<body>
+<body background="backimage.jpg">
 	
-<div class="navbar navbar-inverse navbar-static-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
 		<a  class="navbar-brand" href="#">Tech Site</a>
 		<div>
