--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<a href="#">Sign Up</a>
 				
 			</button>
-			<button class="btn btn-success">
+			<button class="btn btn-info">
 				<a href="#">Explore</a>
 			</button>
 			</center>
@@ -51,35 +51,32 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4">
-				<a href="#"><h3>Elon Musk Wants to Computerize Your Brain</h3></a>
-				<a href="#" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA5MC83NDkvb3JpZ2luYWwvZWxvbi1tdXNrLmpwZw=="></a>
+				<a href="article1.html"><h3>Elon Musk Wants to Computerize Your Brain</h3></a>
+				<a href="article1.html" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA5MC83NDkvb3JpZ2luYWwvZWxvbi1tdXNrLmpwZw=="></a>
 				<p>Elon Musk wants to hack the brain.
 
 				The CEO of SpaceX and Tesla has launched a medical research company called Neuralink in California, the Wall Street Journal reported. The goal is to create brain-computer interfaces that would allow humans to connect directly with what he's called "the digital version of yourself" — electronic devices.
 
 				Musk has previously urged the upgrade of human cognition to prevent people.. 
 				</p>
-				<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
+				<div><button class="btn btn-info"><a href="article1.html">Read more</a></button></div>
 			</div>
 			<div class="col-xs-4">
-				<a href="#"><h3>Watch Amazon CEO Control a Giant Mech Robot</h3></a>
-				<a href="#" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA5MC81Mzkvb3JpZ2luYWwvamVmZi1iZXpvcy1tZWNoLXJvYm90LmpwZWc=="></a>
+				<a href="article2.html"><h3>Watch Amazon CEO Control a Giant Mech Robot</h3></a>
+				<a href="article2.html" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA5MC81Mzkvb3JpZ2luYWwvamVmZi1iZXpvcy1tZWNoLXJvYm90LmpwZWc=="></a>
 				<p>
 				Amazon CEO Jeff Bezos got to live out every 6-year-old's fantasy when he got behind the controls of a giant "mech" robot.
 
 				The Verge reports that Bezos tried out the 13-foot-tall (4 meters) robot yesterday (March 19) at his company's private Machine Learning, Home Automation, Robotics and Space Exploration (MARS) conference. Video of the bot, developed by Hankook Mirae Technology in South Korea..
 				</p>
-				<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
+				<div><button class="btn btn-info "><a href="article2.html">Read more</a></button></div>
 			</div>
 			<div class="col-xs-4">
-				<a href="#"><h3>Doomsday Library Joins Seed Vault in Arctic Norway</h3></a>
-				<a href="#" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA4OS84NDAvb3JpZ2luYWwvU3ZhbGJhcmQtR2xvYmFsLVNlZWQtVmF1bHQtRW50cmFuY2UuanBlZw=="></a>
+				<a href="article3.html"><h3>Doomsday Library Joins Seed Vault in Arctic Norway</h3></a>
+				<a href="article3.html" class="thumbnail"><img src="https://img.purch.com/rc/360x240/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzA4OS84NDAvb3JpZ2luYWwvU3ZhbGJhcmQtR2xvYmFsLVNlZWQtVmF1bHQtRW50cmFuY2UuanBlZw=="></a>
 				<p>
-				The so-called doomsday seed vault located underground on a remote island in the Arctic Ocean has gained a neighbor, and the new vault, opened March 27, will act as a digital archive for the world's data.
-
-	          		The underground Svalbard Global Seed Vault was built in 2008, about 620 miles (1,000 kilometers) from the North Pole. The frozen-storage facility houses the world's most important c
-				</p>
-				<div><button class="btn btn-default "><a href="#">Read more</a></button></div>
+				The so-called doomsday seed vault located underground on a remote island in the Arctic Ocean has gained a neighbor,  March 27, will act as a digital archive for the world's data.The underground Svalbard Global Seed Vault was built in 2008, about 620 miles (1,000 kilometers) from the North Pole. The frozen-storage facility houses the world's most important concept. Thus, the moniker "doomsday vault."<br><br></p>
+				<div><button class="btn btn-info"><a href="article3.html">Read more</a></button></div>
 			</div>
 			
 			
@@ -88,7 +85,7 @@
 	</div>
 	</center>	
 	
-<div class="navbar navbar-default navbar-static-bottom">
+<div class="navbar navbar-inverse navbar-static-bottom">
  	<div class="container">
     		<p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
 	</div>	
